--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -64,6 +64,7 @@
    title = {Tissue-of-origin for cancers determines HIF-1 activation induced phenotypic heterogeneity},
    volume = {63},
    year = {2024},
+   google_scholar_id = {HDshCWvjkbEC},
 }
 @article{Liu2024,
    abstract = {Tumor hypoxia is a common microenvironmental factor in breast cancers, resulting in stabilization of Hypoxia-Inducible Factor 1 (HIF-1), the master regulator of hypoxic response in cells. Metabolic adaptation by HIF-1 results in inhibition of citric acid cycle, causing accumulation of lactate in large concentrations in hypoxic cancers. Lactate can therefore serve as a secondary microenvironmental factor influencing cellular response to hypoxia. Presence of lactate can alter the hypoxic response of breast cancers in many ways, sometimes in opposite manners. Lactate stabilizes HIF-1 in oxidative condition, as well as destabilizes HIF-1 in hypoxia, increases cellular acidification, and mitigates HIF-1-driven inhibition of cellular respiration. We therefore tested the effect of lactate in MDA-MB-231 under hypoxia, finding that lactate can activate pathways associated with DNA replication, and cell cycling, as well as tissue morphogenesis associated with invasive processes. Using a bioengineered nano-patterned stromal invasion assay, we also confirmed that high lactate and induced HIF-1α gene overexpression can synergistically promote MDA-MB-231 dissemination and stromal trespass. Furthermore, using The Cancer Genome Atlas, we also surprisingly found that lactate in hypoxia promotes gene expression signatures prognosticating low survival in breast cancer patients. Our work documents that lactate accumulation contributes to increased heterogeneity in breast cancer gene expression promoting cancer growth and reducing patient survival.},
@@ -303,6 +304,8 @@
    title = {Tracing the cis-regulatory changes underlying the endometrial control of placental invasion},
    volume = {119},
    year = {2022},
+   altmetric = {121992026},
+   dimensions = {true},
 }
 @article{Raredon2019,
    abstract = {Efforts to decipher chronic lung disease and to reconstitute functional lung tissue through regenerative medicine have been hampered by an incomplete understanding of cell-cell interactions governing tissue homeostasis. Because the structure of mammalian lungs is highly conserved at the histologic level, we hypothesized that there are evolutionarily conserved homeostatic mechanisms that keep the fine architecture of the lung in balance. We have leveraged single-cell RNA sequencing techniques to identify conserved patterns of cell-cell cross-talk in adult mammalian lungs, analyzing mouse, rat, pig, and human pulmonary tissues. Specific stereotyped functional roles for each cell type in the distal lung are observed, with alveolar type I cells having a major role in the regulation of tissue homeostasis. This paper provides a systems-level portrait of signaling between alveolar cell populations. These methods may be applicable to other organs, providing a roadmap for identifying key pathways governing pathophysiology and informing regenerative efforts.},
