correct scholar profile

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -306,6 +306,7 @@
    year = {2022},
    altmetric = {121992026},
    dimensions = {true},
+   selected = {true},
 }
 @article{Raredon2019,
    abstract = {Efforts to decipher chronic lung disease and to reconstitute functional lung tissue through regenerative medicine have been hampered by an incomplete understanding of cell-cell interactions governing tissue homeostasis. Because the structure of mammalian lungs is highly conserved at the histologic level, we hypothesized that there are evolutionarily conserved homeostatic mechanisms that keep the fine architecture of the lung in balance. We have leveraged single-cell RNA sequencing techniques to identify conserved patterns of cell-cell cross-talk in adult mammalian lungs, analyzing mouse, rat, pig, and human pulmonary tissues. Specific stereotyped functional roles for each cell type in the distal lung are observed, with alveolar type I cells having a major role in the regulation of tissue homeostasis. This paper provides a systems-level portrait of signaling between alveolar cell populations. These methods may be applicable to other organs, providing a roadmap for identifying key pathways governing pathophysiology and informing regenerative efforts.},
@@ -328,6 +329,7 @@
    title = {Systems Biology of Cancer Metastasis},
    volume = {9},
    year = {2019},
+   selected = {true},
 }
 @article{Suhail2020,
    abstract = {Extraction of teeth is an important treatment decision in orthodontic practice. An expert system that is able to arrive at suitable treatment decisions can be valuable to clinicians for verifying treatment plans, minimizing human error, training orthodontists, and improving reliability. In this work, we train a number of machine learning models for this prediction task using data for 287 patients, evaluated independently by five different orthodontists. We demonstrate why ensemble methods are particularly suited for this task. We evaluate the performance of the machine learning models and interpret the training behavior. We show that the results for our model are close to the level of agreement between different orthodontists.},
