--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,7 +56,7 @@
 }
 @article{Liu2024,
    abstract = {Hypoxia-inducible factor-1 (HIF-1) is the master regulator of cellular response to hypoxia, and is activated in many cancers contributing to many steps in the metastatic cascade by acting as a key transcription co-regulator for a large number of downstream genes. Presence of hypoxia within a tumor is spatially nonuniform, and can also by dynamic. Further, although HIF-1 is primarily stabilized and activated by lack of molecular O2, its stability is also affected by other factors present in the tumor microenvironment. HIF-1 also crosstalks with other transcription factors in co-regulating gene expression. Consequently, it is nontrivial to predict the gene expression patterns in cells in response to hypoxia, or HIF-1 activation. Additionally, cancers originating from tissue origins with different basal level of partial oxygen tension may activate HIF-1 at different threshold of hypoxia. We analyzed large published single cell RNAseq data for colorectal, lung, and pancreatic cancers to investigate the phenotypic outcome of HIF-1 activation in cancer cells. We found that cancers from tissues with different partial O2 tension levels exhibit HIF-1 activation at different stages of metastasis, and phenotypically respond differently to HIF-1 activation, likely by contextual co-option of different transcription factors. We experimentally confirmed these predictions by using cell lines representative of colorectal, lung, and pancreatic cancers, finding that while hypoxia enhances growth of colorectal cancer, it induces increased invasion of lung, and pancreatic cancers. Our analysis suggest that HIF-1 activation may act as a rheostat regulating downstream gene expression towards phenotypic outcomes differently in various cancers.},
-   author = {Shaofei Liu and Yamin Liu and Xihua Qiu and Yasir Suhail and Kshitiz},
+   author = {Shaofei Liu and Yamin Liu and Xihua Qiu and *Yasir Suhail* and Kshitiz},
    doi = {10.1002/mc.23691},
    issn = {10982744},
    issue = {5},
@@ -205,6 +205,8 @@
    title = {Dynamic secretome of bone marrow-derived stromal cells reveals a cardioprotective biochemical cocktail},
    volume = {116},
    year = {2019},
+   publisher = {PNAS},
+   selected = {true},
 }
 @article{Suhail2021,
    abstract = {Mammals exhibit large differences in rates of cancer malignancy, even though the tumor formation rates may be similar. In placental mammals, rates of malignancy correlate with the extent of placental invasion. Our Evolved Levels of Invasibility (ELI) framework links these two phenomena identifying genes that potentially confer resistance in stromal fibroblasts to limit invasion, from trophoblasts in the endometrium, and from disseminating melanoma in the skin. Herein, using patient data from The Cancer Genome Atlas (TCGA), we report that these anti-invasive genes may be crucial in melanoma progression in human patients, and that their loss is correlated with increased cancer spread and lowered survival. Our results suggest that, surprisingly, these anti-invasive genes, which have lower expression in humans compared to species with non-invasive placentation, may potentially prevent stromal invasion, while a further reduction in their levels increases the malignancy and lethality of melanoma. Our work links evolution, comparative biology, and cancer progression across tissues, indicating new avenues for using evolutionary medicine to prognosticate and treat human cancers.},
@@ -216,6 +218,7 @@
    title = {Evolved resistance to placental invasion secondarily confers increased survival in melanoma patients},
    volume = {10},
    year = {2021},
+   google_scholar_id = {4DMP91E08xMC},
 }
 @article{Zhu2016,
    abstract = {Modern agriculture is facing multiple challenges including the necessity for a substantial increase in production to meet the needs of a burgeoning human population. Water shortage is a deleterious consequence of both population growth and climate change and is one of the most severe factors limiting global crop productivity. Brassica species, particularly canola varieties, are cultivated worldwide for edible oil, animal feed, and biodiesel, and suffer dramatic yield loss upon drought stress. The recent release of the Brassica napus genome supplies essential genetic information to facilitate identification of drought-related genes and provides new information for agricultural improvement in this species. Here we summarize current knowledge regarding drought responses of canola, including physiological and -omics effects of drought. We further discuss knowledge gained through translational biology based on discoveries in the closely related reference species Arabidopsis thaliana and through genetic strategies such as genome-wide association studies and analysis of natural variation. Knowledge of drought tolerance/resistance responses in canola together with research outcomes arising from new technologies and methodologies will inform novel strategies for improvement of drought tolerance and yield in this and other important crop species.},
@@ -238,6 +241,10 @@
    title = {E-cadherin is required for metastasis in multiple models of breast cancer},
    volume = {573},
    year = {2019},
+   publisher = {Nature},
+   google_scholar_id = {Zph67rFs4hoC},
+   altmetric = {65898340},
+   dimensions = {true},
 }
 @article{Kshitiz2022,
    abstract = {Response to hypoxia is a highly regulated process, but little is known about single-cell responses to hypoxic conditions. Using fluorescent reporters of hypoxia response factor-1α (HIF-1α) activity in various cancer cell lines and patient-derived cancer cells, we show that hypoxic responses in individual cancer cells can be highly dynamic and variable. These responses fall into three classes, including oscillatory activity. We identify a molecular mechanism that can account for all three response classes, implicating reactive-oxygen-species-dependent chaperone-mediated autophagy of HIF-1α in a subset of cells. Furthermore, we show that oscillatory response is modulated by the abundance of extracellular lactate in a quorum-sensing-like mechanism. We show that oscillatory HIF-1α activity rescues hypoxia-mediated inhibition of cell division and causes broad suppression of genes downregulated in cancers and activation of genes upregulated in many cancers, suggesting a mechanism for aggressive growth in a subset of hypoxic tumor cells.},
@@ -260,6 +267,7 @@
    title = {Finding friends and enemies in an enemies-only network: A graph diffusion kernel for predicting novel genetic interactions and co-complex membership from yeast genetic interactions},
    volume = {18},
    year = {2008},
+   publisher = {Genome Research}
 }
 @article{Suhail2021,
    abstract = {Background: The disease burden of SARS-CoV-2 as measured by tests from various localities, and at different time points present varying estimates of infection and fatality rates. Models based on these acquired data may suffer from systematic errors and large estimation variances due to the biases associated with testing. An unbiased randomized testing to estimate the true fatality rate is still missing. Methods: Here, we characterize the effect of incidental sampling bias in the estimation of epidemic dynamics. Towards this, we explicitly modeled for sampling bias in an augmented compartment model to predict epidemic dynamics. We further calculate the bias from differences in disease prediction from biased, and randomized sampling, proposing a strategy to obtain unbiased estimates. Results: Our simulations demonstrate that sampling biases in favor of patients with higher disease manifestation could significantly affect direct estimates of infection and fatality rates calculated from the numbers of confirmed cases and deaths, and serological testing can partially mitigate these biased estimates. Conclusions: The augmented compartmental model allows the explicit modeling of different testing policies and their effects on disease estimates. Our calculations for the dependence of expected confidence on a randomized sample sizes, show that relatively small sample sizes can provide statistically significant estimates for SARS-CoV-2 related death rates.},
@@ -307,6 +315,7 @@
    altmetric = {121992026},
    dimensions = {true},
    selected = {true},
+   publisher = {PNAS},
 }
 @article{Raredon2019,
    abstract = {Efforts to decipher chronic lung disease and to reconstitute functional lung tissue through regenerative medicine have been hampered by an incomplete understanding of cell-cell interactions governing tissue homeostasis. Because the structure of mammalian lungs is highly conserved at the histologic level, we hypothesized that there are evolutionarily conserved homeostatic mechanisms that keep the fine architecture of the lung in balance. We have leveraged single-cell RNA sequencing techniques to identify conserved patterns of cell-cell cross-talk in adult mammalian lungs, analyzing mouse, rat, pig, and human pulmonary tissues. Specific stereotyped functional roles for each cell type in the distal lung are observed, with alveolar type I cells having a major role in the regulation of tissue homeostasis. This paper provides a systems-level portrait of signaling between alveolar cell populations. These methods may be applicable to other organs, providing a roadmap for identifying key pathways governing pathophysiology and informing regenerative efforts.},
@@ -318,6 +327,7 @@
    title = {Single-cell connectomic analysis of adult mammalian lungs},
    volume = {5},
    year = {2019},
+   publisher = {Science Advances},
 }
 @misc{Suhail2019,
    abstract = {Cancer metastasis is no longer viewed as a linear cascade of events but rather as a series of concurrent, partially overlapping processes, as successfully metastasizing cells assume new phenotypes while jettisoning older behaviors. The lack of a systemic understanding of this complex phenomenon has limited progress in developing treatments for metastatic disease. Because metastasis has traditionally been investigated in distinct physiological compartments, the integration of these complex and interlinked aspects remains a challenge for both systems-level experimental and computational modeling of metastasis. Here, we present some of the current perspectives on the complexity of cancer metastasis, the multiscale nature of its progression, and a systems-level view of the processes underlying the invasive spread of cancer cells. We also highlight the gaps in our current understanding of cancer metastasis as well as insights emerging from interdisciplinary systems biology approaches to understand this complex phenomenon. Cancer metastasis is a complex disease, arising from a growing tumor from which cells escape to other parts of the body. For long, cancer metastasis was considered as a combination of steps, which were studied separately, limiting our understanding of this complex disease. Here, we present the new developments and our perspective on how the new systems biology approach is changing our view of cancer metastasis as an integrated multiscale phenomenon comprising interlinked parts that allow tumors to metastasize.},
@@ -330,6 +340,8 @@
    volume = {9},
    year = {2019},
    selected = {true},
+   google_scholar_id = {ULOm3_A8WrAC},
+   publisher = {Cell Systems},
 }
 @article{Suhail2020,
    abstract = {Extraction of teeth is an important treatment decision in orthodontic practice. An expert system that is able to arrive at suitable treatment decisions can be valuable to clinicians for verifying treatment plans, minimizing human error, training orthodontists, and improving reliability. In this work, we train a number of machine learning models for this prediction task using data for 287 patients, evaluated independently by five different orthodontists. We demonstrate why ensemble methods are particularly suited for this task. We evaluate the performance of the machine learning models and interpret the training behavior. We show that the results for our model are close to the level of agreement between different orthodontists.},
